force-app/main/default/objects/Case/fields/HelloBuisness__c.field-meta.xml
<CustomField>
    <fullName>HelloBuisness__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HelloBuisness</label>
    <length>250</length>
    <type>Text</type>
</CustomField>