force-app/main/default/objects/Case/fields/HelloTest__c.field-meta.xml
<CustomField>
    <fullName>HelloTest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HelloTests</label>
    <length>220</length>
    <type>Text</type>
</CustomField>