force-app/main/default/objects/Case/fields/NiceBuisness__c.field-meta.xml
<CustomField>
    <fullName>NiceBuisness__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NiceBuisness</label>
    <length>248</length>
    <type>Text</type>
</CustomField>